--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,15 @@
 {
+  "EmailConfiguration": {
+    "SmtpServer": "smtp.yahoo.com",
+    "SmtpPort": 465,
+    "SmtpUsername": "smtpusername",
+    "SmtpPassword": "smtppassword",
+
+    "PopServer": "popserver",
+    "PopPort": 995,
+    "PopUsername": "popusername",
+    "PopPassword": "poppassword"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
@@ -7,5 +18,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=serviceAssistants;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  },
+  // TODO.. Add Client Id here
+  "PayPalClientId": "AVw94aF65wckLpuqM87vDZnMT67_LNHFJ9Yb5h63BwLD7ha0Vz69LNi6je9g6KmkRZTjpin3yMiwWwQg",
+
+  // TODO.. Add Client secret here
+  "PayPalClientSecret": "EFeLysEa6oLbsCOUrz0KM7LmWpEDWC5aRmZ_f3BH_uCh-3eO1hBvzTN1em0MmXkLlrDSe17qVD_aIADk"
 }
